<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.xe.activity.LoginActivity" >

   	<LinearLayout 
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:gravity="center"
        >
        
        <EditText 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="E-MAIL"
            android:id="@+id/et_usuario"
            />
        
        <EditText 
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/et_senha"
            android:inputType="textPassword"
            android:ems="10"
            android:hint="SENHA"
            />
        
        <Button 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:layout_gravity="center"
            android:textColor="#ffffff"
            android:id="@+id/b_login"
            />
        
        <LinearLayout 
            android:orientation="vertical"
            android:layout_width="match_parent"
        	android:layout_height="match_parent"
            >
		        <TextView 
		            android:layout_width="match_parent"
		            android:layout_height="wrap_content"
		            android:layout_marginTop="10dp"
		            android:text="@string/nao_tem_cadastro"
		            android:gravity="center"
		            android:textSize="15sp"
		            />
		        
		        <Button
		            android:id="@+id/fazer_cadastro" 
		            android:layout_width="70dp"
		            android:layout_height="30dp"
		            android:text="@string/clique_aqui"
		            android:textSize="10sp"
		            android:layout_gravity="center"
		            android:textColor="#ffffff"
		            android:background="#000000"
		            android:onClick="cadastrarUsuario"
		            />
        </LinearLayout>
        
    </LinearLayout>

</RelativeLayout>
